fix header font size on mobile

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ header{
 }
 header h1{
     font-family: 'Courier New', Courier, monospace;
-    font-size: clamp(2.4rem, 5vw, 4rem);
+    font-size: 4rem;
     text-align: center;
     margin-bottom: 100px;
 }
@@ -249,5 +249,8 @@ footer p a{
     }
     .book-title{
         font-size: 1.2rem;
+    }
+    header h1{
+        font-size: 2.4rem;
     }
 }
